Updated PFL + adapted JPMS
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>